* FIXED SOME LAYOUT ISSUES

--- a/src/contacts_page_style.css
+++ b/src/contacts_page_style.css
@@ -9,7 +9,7 @@ div.personal_contacts_div_style
     justify-items: center;
     align-self: center;
     width: 90%;
-    height: 90vmin;
+    height: 99vh;
     background-image: linear-gradient(to right, rgb(0, 0, 0), rgb(11, 11, 11));
 }
 
