--- a/src/home_page_style.css
+++ b/src/home_page_style.css
@@ -41,7 +41,7 @@ div.profile_picture_div_style
 
 div.profile_picture_frame_style
 {
-    margin-top: 10vmin;
+    margin-top: 20vmin;
     display: flex;
     align-self: center;
     justify-content: center;
@@ -74,8 +74,8 @@ div.personal_bio_div_style
     justify-content: center;
     justify-items: center;
     align-self: center;
-    width: 90%;
-    height: 90vmin;
+    width: 95%;
+    height: 90vh;
     background-image: linear-gradient(to right, rgb(0, 0, 0), rgb(11, 11, 11));
 }
 
