--- a/src/main_style.css
+++ b/src/main_style.css
@@ -1,24 +1,35 @@
 body.main_body_style
 {
+    margin:  0px;
+    padding: 0px;
     background-image: linear-gradient(to right, rgb(46, 19, 0) ,black);
 }
 
 div.main_page_div_style
 {
     width: 100%;
+    height: 99vh;
 }
+
+div.navigation_bar_style
+{
+    width: 100%;
+    background-image: linear-gradient(to right, rgb(39, 16, 0), rgb(31, 13, 0));
+    z-index: 3;
+    display: flex;
+    flex-direction: row;
+    position: fixed;
+}
+
 
 div.main_menu_div_style
 {
-    margin: 0px;
-    padding: 0px;
     z-index: 3;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     align-content: flex-start;
-    position: fixed;
 }
 
 div.main_menu_controls_div_style
@@ -33,6 +44,9 @@ div.main_menu_controls_div_style
 
 div.main_menu_div_items_style
 {
+    z-index: -1;
+    border-radius: 2vmin;
+    margin-top: calc(1px + 8vmin);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -42,6 +56,7 @@ div.main_menu_div_items_style
     width: calc(1px + 10vmin + 25vmin);
     height: 0vmin;
     visibility: hidden;
+    position: fixed;
     /*height: 35vmin;*/
 }
 
@@ -72,7 +87,7 @@ button.main_menu_button_style
     justify-content: center;
     width: calc(1px + 10vmin);
     height: calc(1px + 10vmin);
-    background-image: linear-gradient(to right, rgb(239, 113, 4), black);
+    background-image: linear-gradient(to right, rgb(118, 55, 0), black);
     border-width: 0px;
     border-color: transparent;
 }
@@ -80,18 +95,19 @@ button.main_menu_button_style
 button.menu_item_style
 {
     align-self: center;
-    margin-top: 3vmin;
+    margin-top: 2vmin;
     margin-bottom: 2vmin;
     background-color: black;
-    border-radius: 1vmin;
-    border-width: 0.5px;
+    border-radius: 2vmin;
+    border-width: 1px;
     border-color: rgb(108, 108, 108);
     color: rgb(221, 103, 0);;
     width: calc(1px + 10vmin + 20vmin);
+    font-weight: bold;
     /* height: 5vmin; */
     height: 0vmin;
     visibility: hidden;
-    font-size: 4vmin;
+    font-size: 3.5vmin;
 }
 
 button.menu_item_style:hover
@@ -121,7 +137,7 @@ div.crt_div_screen_style
     justify-content: center;
     align-content: center;
     width: 98%;
-    height: 98%;
+    height: 90vh;
     background-color: linear-gradient(to right, rgb(0, 0, 0), rgb(17, 17, 17));
 }
 
@@ -181,10 +197,14 @@ a.link_style
 
 h1.page_title_style
 {
-    text-align: center;
-    position: relative;
+    margin-top: 8vmin;
+    left: 50%;
+    height: 10vmin;
+    z-index: 3;
+    transform: translate(-50%);
+    position: fixed;
     align-self: center;
-    font-size: 6vmin;
+    font-size: 5vmin;
     color: transparent;
     font-family: 'Courier New', Courier, monospace;
     text-shadow: 0 0 1.5px rgba(255, 136, 0, 1);
@@ -199,6 +219,7 @@ p.menu_label_style
     visibility: hidden;
     color: transparent;
     font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
     text-shadow: 0 0 1.5px rgba(255, 136, 0, 1);
     margin: 0px;
     padding: 0px;
